# KeyIt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/keyit/: keyit.h
scripts/: export_musicalkeycnn_coreml.py  fit_cqt_log_bias_calibration.py  fit_cqt_log_bias_from_outputs.py  generate_test_wavs.py  parity_check.py
src/cli/: main.mm
src/keyit/: analysis.cpp  analysis_features_internal.cpp  analysis_features_internal.h  analysis_inference_internal.cpp  analysis_inference_internal.h  coreml.mm  coreml_internal.h
tests/: keyit_gpu_tests.cpp  keyit_pipeline_tests.cpp  keyit_tests.cpp
